--- a/project1/pom.xml
+++ b/project1/pom.xml
@@ -60,19 +60,19 @@
                 </exclusion>
             </exclusions>
         </dependency>
-<!--         mongodb java driver -->
+        <!--         mongodb java driver -->
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
             <version>3.0.0</version>
         </dependency>
-<!--         mongodb driver -->
+        <!--         mongodb driver -->
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongodb-driver</artifactId>
             <version>3.4.2</version>
         </dependency>
-<!--         google guava -->
+        <!--         google guava -->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
@@ -83,6 +83,12 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.6.2</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.5-beta5</version>
         </dependency>
     </dependencies>
     
